# note-app

./: .env  Cargo.toml  Dockerfile  Dockerfile-debug  Dockerfile-debug copy  Dockerfile-release  Dockerfile.bak  Makefile  Makefile copy  build.sh  docker-compose-debug.yml  docker-compose-k6.yml  docker-compose-release.yml  docker-compose.yml  init-dependencies.txt  prometheus.yml
init_db/: init.sql  table.sql
k6/: load.js
k8s/: env-configmap.yaml  ingress-nginx-controller-cm.yaml  k6-cm0-configmap.yaml  k6-deployment.yaml  k6-service.yaml  mysql-cm0-configmap.yaml  mysql-deployment.yaml  mysql-service.yaml  nginx-patch.sh  note-app-deployment.yaml  note-app-service.yaml
k8s/ingress/: ingress-nginx-controller-cm.yaml  nginx-patch.json  note-app-ingress.yaml
k8s/k6/: k6-cm0-configmap.yaml  k6-deployment.yaml
src/: handler.rs  main.rs  model.rs  route.rs  schema.rs  service.rs
test/: health_check.http  test.http
